--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </head>
     <body>
         <header>
-            Bonjour!
+            Bienvenue à Bioinformatique.ca
         </header>
 
         <div class="presentation">
