--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <meta name="rating" content="safe for kids">
         <meta name="copyright" content="Copyright 2024">
         <meta name="format-detection" content="telephone=yes">
+        <meta name="google-adsense-account" content="ca-pub-1029306458557959">
 
         <meta property="og:title" content="Bioinformatique">
         <meta property="og:type" content="website">
