--- a/HTML/GeneCodant.html
+++ b/HTML/GeneCodant.html
@@ -46,7 +46,7 @@
         </div>
         
         <div >
-            <button class="BtnRetour" onclick="window.location.href='../Index.html'"> Retourner à la page d'accueil</button>
+            <button class="BtnRetour" onclick="window.location.href='../index.html'"> Retourner à la page d'accueil</button>
         </div>
 
     </body>
